@@ -3,6 +3,7 @@ use warnings;
 package Dist::Zilla::Util;
 # ABSTRACT: random snippets of code that Dist::Zilla wants
 
+use Carp ();
 use String::RewritePrefix 0.002; # better string context behavior
 
 {
@@ -99,6 +100,25 @@ sub _global_config_root {
     or Carp::croak("couldn't determine home directory");
 
   return Path::Class::dir($homedir)->subdir('.dzil');
+}
+
+sub _assert_loaded_class_version_ok {
+  my ($self, $pkg, $version) = @_;
+
+  require CPAN::Meta::Requirements;
+  my $req = CPAN::Meta::Requirements->from_string_hash({
+    $pkg => $version,
+  });
+
+  my $have_version = $pkg->VERSION;
+  unless ($req->accepts_module($pkg => $have_version)) {
+    Carp::confess( sprintf
+      "%s version (%s) not match required version: %s",
+      $pkg,
+      $have_version,
+      $version,
+    );
+  }
 }
 
 1;
